--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,9 +3,8 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Auckland Hackspace</h2>
-                <p>This is the best place you should come here</p>
-                <p>Robots will make your drinks</p>
-                <p>Really good internet and pingpong</p>
+                <p>An independent Hackspace/Cafe hybrid in central Auckland for coffee, 3d Printing, Woodworking, Metalworking, Electronics and Coding, Arts and Crafts or just hanging out.
+                </p>
             </div>
         </div>
     </section>
