--- a/_includes/download.html
+++ b/_includes/download.html
@@ -3,9 +3,18 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Moar</h2>
-                    <p>You can download moar things here</p>
-                    <a href="http://things.com/thing" class="btn btn-default btn-lg">CLICK 4 MOAR</a>
+                    <h2>JOIN US!</h2>
+                    <p>The hackspace is regularly open on DECIDE_ON_DAY</p>
+
+                    <p>Membership costs $10 a week and includes full access to everything 24/7* including:</p>
+                    <p>Fibre Internet</p>
+                    <p>Woodworking tools</p>
+                    <p>Soldering & Electronics</p>
+                    <p>Quiet places to work</p>
+                    <p>All of the tea / coffee</p>
+
+                    <p>*plz no powertools/noisey things after 10pm</p>
+                    <a href="#" class="btn btn-default btn-lg">CLICK 4 MOAR</a>
                 </div>
             </div>
         </div>
