--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,10 +18,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">More</a>
+                        <a class="page-scroll" href="#about">INFOZ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Join</a>
+                        <a class="page-scroll" href="#equipment">Tools</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#download">Join!</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Hi</a>
