--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
     {% include nav.html %}
     {% include header.html %}
     {% include about.html %}
-    {% include download.html %}
+    {% include equipment.html %}
+    {% include join_us.html %}
     {% include contact.html %}
     {% include map.html %}
     {% include footer.html %}
