--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -11,6 +11,7 @@
                 <p>Dremel</p>
                 <p>Drills</p>
                 <p>Hand Tools</p>
+                <p>Sewing Machine</p>
 
                 <p>More to come...</p>
 
