emphasis that  is minimum so please pay what you feel it's worth to you so space can survive

--- a/_includes/join_us.html
+++ b/_includes/join_us.html
@@ -6,9 +6,11 @@
                     <h2>JOIN US!</h2>
                     <p>The hackspace is regularly open on DECIDE_ON_DAY</p>
 
-                    <p>Membership costs $10 a week and includes full access to everything 24/7* including:</p>
-                    <p>Fibre Internet</p>
+                    <p>Membership costs (minimum) $10 a week but please pay as much as you feel is fair so the space can survive.
+                      Membership includes full access to everything 24/7* including:</p>
+                    <p>UNLIMITED Fibre Internet</p>
                     <p>Woodworking tools</p>
+                    <p>Storage for projects</p>
                     <p>Soldering & Electronics</p>
                     <p>Quiet places to work</p>
                     <p>All of the tea / coffee</p>
