--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -8,6 +8,7 @@
                 <p>3D Delta PET/Ceramic Printer</p>
                 <p>CNC Laser ENGRAVER</p>
                 <p>Ethereum miner</p>
+                <p>Soldering Irons</p>
                 <p>Dremel</p>
                 <p>Drills</p>
                 <p>Hand Tools</p>
