Add easels to equipment list.
Can install easels

--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -12,6 +12,7 @@
                 <p>Dremel</p>
                 <p>Drills</p>
                 <p>Hand Tools</p>
+                <p>Easels</p>
 
                 <p>More to come...</p>
 
