renamed! + other space info + more pics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
+          <p>Licenced under GPL 3.0</p>
             <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
         </div>
     </footer>
