--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     {% include join_us.html %}
     {% include contact.html %}
     {% include map.html %}
+    {% include other_spaces.html %}
     {% include footer.html %}
     {% include js.html %}
     </body>
