--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,10 +1,18 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Auckland Hackspace</h2>
-                <p>An independent Hackspace/Cafe hybrid in central Auckland for coffee, 3d Printing, Woodworking, Metalworking, Electronics and Coding, Arts and Crafts or just hanging out.
-                </p>
+            <div class="col-lg-4">
+              <img src="img/IMG_0957_COLLAGE.jpg" class="img-responsive">
+            </div>
+            <div class="col-lg-8">
+              <h2>About the hAKLand Hackspace</h2>
+              <p>
+                An independent, not for profit Hackspace/Cafe hybrid in central Auckland for
+                coffee, Ethereum, Bitcoin, 3d Printing, Woodworking, Metalworking, Electronics, Coding,
+                Arts and Crafts or just hanging out.
+              </p>
+
+              
             </div>
         </div>
     </section>
