--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">{{ site.title }}</h1>
+                        <h1 class="brand-heading">
+                          <i class="fa fa-play-circle"></i>  <span class="light">{{site.title}}</span>
+                        </h1>
                         <p class="intro-text">{{ site.description }}<br>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
