--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,14 +5,15 @@
               <img src="img/IMG_0957_COLLAGE.jpg" class="img-responsive">
             </div>
             <div class="col-lg-8">
-              <h2>About the hAKLand Hackspace</h2>
+              <h2>About hackLand</h2>
               <p>
                 An independent, not for profit Hackspace/Cafe hybrid in central Auckland for
                 coffee, Ethereum, Bitcoin, 3d Printing, Woodworking, Metalworking, Electronics, Coding,
                 Arts and Crafts or just hanging out.
               </p>
 
-              
+              <a href="https://goo.gl/forms/XAyCLl92GzYykcCa2" class="btn btn-default btn-lg">JOIN HACKLAND</a>
+
             </div>
         </div>
     </section>
