--- a/_includes/join_us.html
+++ b/_includes/join_us.html
@@ -16,7 +16,7 @@
                     <p>All of the tea / coffee</p>
 
                     <p>*plz no powertools/noisey things after 10pm</p>
-                    <a href="#" class="btn btn-default btn-lg">CLICK 2 JOIN</a>
+                    <a href="https://goo.gl/forms/XAyCLl92GzYykcCa2" class="btn btn-default btn-lg">JOIN HACKLAND</a>
                 </div>
             </div>
         </div>
