links and key parts of constituion

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,15 +1,38 @@
     <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <section id="about" class="container content-section">
         <div class="row">
             <div class="col-lg-4">
               <img src="img/IMG_0957_COLLAGE.jpg" class="img-responsive">
             </div>
             <div class="col-lg-8">
-              <h2>About hackLand</h2>
+              <h2>INFO</h2>
               <p>
-                An independent, not for profit Hackspace/Cafe hybrid in central Auckland for
+                Hackland is an independent, not for profit Hackspace/Cafe hybrid in central Auckland for
                 coffee, Ethereum, Bitcoin, 3d Printing, Woodworking, Metalworking, Electronics, Coding,
                 Arts and Crafts or just hanging out.
+              </p>
+
+              <h4>Guiding Principles</h4>
+
+              <p>
+                <strong>Change and Experimentation</strong> is welcome, even if you're not an expert or not sure where something is going. Everything in the space is hackable
+                unless it has a "<strong>Do Not Hack</strong>" sticker on it. If it looks expensive or hacking it would take longer than 6 hours to put back,
+                please check with the group or post on the Slack channel or Loomio before taking it to bits.
+              </p>
+
+              <p>
+                <strong>Big Changes & Group Consensus</strong>: if a change is big, talk about it with as many people as possible in person, then
+                ask on slack and post a Loomio proposal to see how the wider-group feels about it.
+                The aim is always to reach a compromise everyone is okay with, but one which is best for the entire group, not one individual.
+              </p>
+
+              <p>
+                <strong>Safety:</strong> there are dangerous tools and equipment, which should be labeled - please have someone show you
+                how to safely use them before turning them on. Always use the correct safety equipment and always warn of loud noise before making it.
+              </p>
+
+              <p>
+                <a href="https://github.com/HakLand/Constitution">github.com/HakLand/Constitution</a>
               </p>
 
               <a href="https://goo.gl/forms/XAyCLl92GzYykcCa2" class="btn btn-default btn-lg">JOIN HACKLAND</a>
