--- a/_includes/join_us.html
+++ b/_includes/join_us.html
@@ -3,22 +3,22 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-12">
-                    <h2>JOIN US!</h2>
+                    <h2>JOIN US! <a href="https://goo.gl/forms/XAyCLl92GzYykcCa2" class="btn btn-default btn-lg">JOIN HACKLAND</a></h2>
                     <p>Members can use the space whenever they want, 24 hours every day of the week</p>
                     <p>The hackspace is regularly open to the public whenever a member is in to open up, and weekly on Thursday from 6pm - this is the busiest time and the best for new people visiting</p>
 
                     <p>Membership costs $15 a week but please pay as much as you feel is fair so the space can survive.
-                      Casual day use is by Koha or coffee buying.
+                      Casual day use is by Koha or coffee buying - please check Twitter to see if the space is open
                     </p>
                     <p>
                       Membership includes full access to everything 24/7* including:
                     </p>
 
-                    <p>UNLIMITED Fibre Internet</p>
+                    <p>UNLIMITED Fibre Internet (unlimited other internet until fibre is installed)</p>
                     <p>Woodworking tools</p>
                     <p>Storage for projects</p>
                     <p>Soldering & Electronics</p>
-                    <p>Quiet places to work</p>
+                    <p>Quiet places to work (sometimes quiet)</p>
                     <p>All of the tea / coffee</p>
 
                     <p>*plz no powertools/noisey things after 10pm</p>
