added more pics of equipment

--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -8,6 +8,19 @@
                 <table class="table">
                   <tr>
                     <td>
+                      <p>2.5m CNC</p>
+                      <img src="img/IMG_20170616_195309.jpg" class="img-responsive">
+
+                    </td>
+                    <td>
+                      <p>Engrave with a lasers onto plastics, wood or aluminium</p>
+
+                      <p>Laser needs to be soldered on and tested</p>
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td>
                       <p>3D Delta PET/Ceramic Printer</p>
                     </td>
                     <td>
@@ -16,10 +29,14 @@
                   </tr>
                   <tr>
                     <td>
-                      <p>CNC Laser ENGRAVER</p>
+                      <p>Laser Cutter</p>
+                      <img src="img/IMG_20170612_213351-01 (1).jpeg" class="img-responsive">
+
                     </td>
                     <td>
                       <p>Engrave with a lasers onto plastics, wood or aluminium</p>
+
+                      <p>Laser needs to be soldered on and tested</p>
                     </td>
                   </tr>
                   <tr>
