--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,6 +3,8 @@
         <div class="row">
             <div class="col-lg-4">
               <img src="img/IMG_0957_COLLAGE.jpg" class="img-responsive">
+              <img src="img/IMG_20170613_180356.jpg" class="img-responsive">
+              <img src="img/IMG_20170613_130113.jpg" class="img-responsive">
             </div>
             <div class="col-lg-8">
               <h2>INFO</h2>
