--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -13,9 +13,8 @@
 
                     </td>
                     <td>
-                      <p>Engrave with a lasers onto plastics, wood or aluminium</p>
-
-                      <p>Laser needs to be soldered on and tested</p>
+                      <p>Can cut full sized plywood sheets or softer metals</p>
+                      <p>80% Setup</p>
                     </td>
                   </tr>
 
