--- a/_includes/other_spaces.html
+++ b/_includes/other_spaces.html
@@ -56,6 +56,26 @@
 
                     </td>
                   </tr>
+                    
+                  <tr>
+                    <td>
+                      <p>TAP:Lab</p>
+                    </td>
+                    <td>
+                      <p>The Te Atatu Peninsula Digital Makerspace in the community centre</p>
+
+                      <span class="label label-default">3D Printing</span>
+                      <span class="label label-default">Arts and Crafts</span>
+                      <span class="label label-default">Electronics</span>
+
+                      <p class="text-right">
+                        <a href="http://www.taplab.nz/">
+                          http://www.taplab.nz/
+                        </a>
+                      </p>
+
+                    </td>
+                  </tr>
 
                 </table>
 
