--- a/_includes/other_spaces.html
+++ b/_includes/other_spaces.html
@@ -29,31 +29,61 @@
 
                     </td>
                   </tr>
+                    
                   <tr>
                     <td>
-                      <p>Gribblehirst Hub & Auckland Central Community Shed</p>
+                      <p>Gribblehirst Hub</p>
                     </td>
                     <td>
-                      <p>Two large spaces in Gribblehirst Park</p>
+                      <p>Upstairs in the former bowling club</p>
 
-                      <span class="label label-default">woodworking</span>
-                      <span class="label label-default">metalworking</span>
                       <span class="label label-default">3D Printing</span>
                       <span class="label label-default">Arts and Crafts</span>
+                      <span class="label label-default">Sewing</span>
                       <span class="label label-default">Knitting</span>
-                      <span class="label label-default">Food</span>
+                      <span class="label label-default">Theatre</span>
+                      <span class="label label-default">Music</span>
+                      <span class="label label-default">Food</span>                      
+                      <span class="label label-default">Electronics</span>
 
                       <p class="text-right">
                         <a href="https://ghub.nz/">
                           https://ghub.nz/
                         </a>
                       </p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p>Gribblehirst Commons</p>
+                    </td>
+                    <td>
+                      <p>The former bowling greens, now under development as an outdoor community making space</p>
+
+                      <span class="label label-default">Growing</span>
+                      <span class="label label-default">Fablab</span>
+                      <span class="label label-default">Events</span>
+                      <p class="text-right">
+                        <a href="https://ghub.nz/">
+                          https://ghub.nz/
+                        </a>
+                      </p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <p> Auckland Central Community Shed</p>
+                    </td>
+                    <td>
+                      <p>Upstairs in the former bowling club</p>
+
+                      <span class="label label-default">woodworking</span>
+                      <span class="label label-default">metalworking</span>
                       <p class="text-right">
                         <a href="https://www.facebook.com/accshed/">
                           https://www.facebook.com/accshed/
                         </a>
                       </p>
-
                     </td>
                   </tr>
                     
