--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,9 +9,9 @@
             <div class="col-lg-8">
               <h2>INFO</h2>
               <p>
-                Hackland is an independent, not for profit Hackspace/Cafe hybrid in central Auckland for
-                coffee, Ethereum, Bitcoin, 3d Printing, Woodworking, Metalworking, Electronics, Coding,
-                Arts and Crafts or just hanging out.
+                Hackland is an independent, not for profit Hackspace in central Auckland for
+                Ukelele, Coffee, Ethereum, Bitcoin, 3D Printing, CNC, Woodworking, Metalworking, Electronics, Coding, Sewing,
+                Arts and Crafts or just hanging out with creative people.
               </p>
 
               <h4>Guiding Principles</h4>
@@ -29,8 +29,8 @@
               </p>
 
               <p>
-                <strong>Safety:</strong> there are dangerous tools and equipment, which should be labeled - please have someone show you
-                how to safely use them before turning them on. Always use the correct safety equipment and always warn of loud noise before making it.
+                <strong>Safety:</strong> there are dangerous tools and equipment in the space. Please have someone show you
+                how to safely use any tool you are unfamilar with before turning them on. Always use the correct safety equipment and always warn other memberes in the space before making loud noises.
               </p>
 
               <p>
