--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -8,13 +8,14 @@
                 <table class="table">
                   <tr>
                     <td>
-                      <p>2.5m CNC</p>
+                      <p>2.4 x 1.2m CNC - Mechmate</p>
                       <img src="img/IMG_20170616_195309.jpg" class="img-responsive">
 
                     </td>
                     <td>
-                      <p>Can cut full sized plywood sheets or softer metals</p>
-                      <p>80% Setup</p>
+                      <p>Can cut full sized 2400x1200mm sheet materials, foams and other materials</p>
+                      <p>Fully dust extracted. Induciton required to use!</p>
+                      <p>Courses running fortnightly for use (open to public) - register: http://meetu.ps/e/FbzCh/BPsl2/f</p>
                     </td>
                   </tr>
 
@@ -28,14 +29,14 @@
                   </tr>
                   <tr>
                     <td>
-                      <p>Laser Cutter</p>
+                      <p>Laser Cutter/Engraver - </p>
                       <img src="img/IMG_20170612_213351-01 (1).jpeg" class="img-responsive">
 
                     </td>
                     <td>
-                      <p>Engrave with a lasers onto plastics, wood or aluminium</p>
+                      <p>Cut and engrave plastics, wood and other materials with laser</p>
 
-                      <p>Laser needs to be soldered on and tested</p>
+                      <p></p>
                     </td>
                   </tr>
                   <tr>
@@ -48,18 +49,10 @@
                   </tr>
                   <tr>
                     <td>
-                      <p>Dremel</p>
+                      <p>Drilling and Milling Machine - ZK32G</p>
                     </td>
                     <td>
-                      <p>High speed multi purpose tool</p>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <p>Mill</p>
-                    </td>
-                    <td>
-                      <p>Can be used to make asymetrical parts</p>
+                      <p>Can be used to make precise parts from light metals and plastics</p>
                     </td>
                   </tr>
                   <tr>
@@ -67,15 +60,26 @@
                       <p>Lathe</p>
                     </td>
                     <td>
-                      <p>Can be used to make symetrical parts</p>
+                      <p>Can be used to make symetrical parts from light metals and plastics</p>
                     </td>
                   </tr>
                 </table>
-
+                
+                
+                <p>Circular (skill) saw</p>
+                <p>2hp Router</p>
+                <p>1/4 hp Palm Router</p>
+                <p>Belt Sander</p>
+                <p>Orbital Sander</p>
+                <p>Nailers</p>
+                <p>Bandsaw</p>
+                <p>Tig Welding Plant</p>
+                <p>Electrode Welding Plant</p>
                 <p>Drills</p>
                 <p>Hand Tools</p>
                 <p>Sewing Machine</p>
-                <p>Easels</p>
+                <p>Overlockers</p>
+                
 
                 <p>More to come...</p>
 
