--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -9,7 +9,7 @@
                   <tr>
                     <td>
                       <p>2.4 x 1.2m CNC - Mechmate</p>
-                      <img src="img/IMG_20170616_195309.jpg" class="img-responsive">
+                      <img src="img/cnc.png" class="img-responsive">
 
                     </td>
                     <td>
@@ -21,7 +21,18 @@
 
                   <tr>
                     <td>
+                      <p>3D Printer - Prusa i3 mk3</p>
+                      <img src="img/prusa.jpg" class="img-responsive">
+                    </td>
+                    <td>
+                      <p>Print small objects in PET Plastic or ceramic clay</p>
+                    </td>
+                  </tr>
+
+                  <tr>
+                    <td>
                       <p>3D Delta PET/Ceramic Printer</p>
+                      <img src="img/delta.jpg" class="img-responsive">
                     </td>
                     <td>
                       <p>Print small objects in PET Plastic or ceramic clay</p>
@@ -30,7 +41,7 @@
                   <tr>
                     <td>
                       <p>Laser Cutter/Engraver - </p>
-                      <img src="img/IMG_20170612_213351-01 (1).jpeg" class="img-responsive">
+                      <img src="img/laser.jpg" class="img-responsive">
 
                     </td>
                     <td>
@@ -64,8 +75,8 @@
                     </td>
                   </tr>
                 </table>
-                
-                
+
+
                 <p>Circular (skill) saw</p>
                 <p>2hp Router</p>
                 <p>1/4 hp Palm Router</p>
@@ -79,7 +90,7 @@
                 <p>Hand Tools</p>
                 <p>Sewing Machine</p>
                 <p>Overlockers</p>
-                
+
 
                 <p>More to come...</p>
 
