--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,16 +18,19 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">INFOZ</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#equipment">Tools</a>
+                        <a class="page-scroll" href="#equipment">Equipment</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Join!</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Hi</a>
+                        <a class="page-scroll" href="https://join.slack.com/hakland/shared_invite/MTkwOTk4MDI5NjUwLTE0OTYzMDE0NDYtNGNmMDMxZGUxNw">SLACK</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
