--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,19 +3,25 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact</h2>
-                <p>y hallo thur.</p>
+
+                <address>
+                  <strong>Hackland Incorporated</strong><br>
+                  Unit B, 48 Bond Street<br>
+                  Kingsland, Auckland, 1021<br>
+                  <abbr title="Phone">P:</abbr> +64 (0204) 404-004
+                </address>
                 <!-- <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
                 </p> -->
                 <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://www.loomio.org/invitations/c087a1f90764a4d182a0" class="btn btn-default btn-lg"><span class="network-name">Loomio</span></a>
-                    </li>
-
                     {% for network in site.social %}
                     <li>
                         <a href="{{ network.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ network.title }} fa-fw"></i> <span class="network-name">{{ network.title }}</span></a>
                     </li>
                     {% endfor %}
+
+                    <li>
+                        <a href="https://www.loomio.org/invitations/c087a1f90764a4d182a0" class="btn btn-default btn-lg"><span class="network-name">Loomio</span></a>
+                    </li>
 
                     <li>
                         <a href="https://www.meetup.com/HackLand/" class="btn btn-default btn-lg"><span class="network-name">Meetup</span></a>
