--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">
-                          <i class="fa fa-play-circle"></i>  <span class="light">{{site.title}}</span>
+                          <img src="img/Hackland-2Lines.png" style="mix-blend-mode: screen;" class="img-responsive" alt="{{site.title}}">
+
                         </h1>
                         <p class="intro-text">{{ site.description }}<br>
                         <a href="#about" class="btn btn-circle page-scroll">
