--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -14,7 +14,7 @@
                     </td>
                     <td>
                       <p>Can cut full sized 2400x1200mm sheet materials, foams and other materials</p>
-                      <p>Fully dust extracted. Induciton required to use!</p>
+                      <p>Fully dust extracted. Induction required to use!</p>
                       <p>Courses running fortnightly for use (open to public) - register: http://meetu.ps/e/FbzCh/BPsl2/f</p>
                     </td>
                   </tr>
