--- a/_includes/other_spaces.html
+++ b/_includes/other_spaces.html
@@ -16,8 +16,8 @@
                         Regularly open every Monday from 6:30pm
                       </p>
 
-                      <span class="label label-default">woodworking</span>
-                      <span class="label label-default">metalworking</span>
+                      <span class="label label-default">Woodworking</span>
+                      <span class="label label-default">Metalworking</span>
                       <span class="label label-default">CNC</span>
                       <span class="label label-default">3D Printing</span>
 
@@ -77,8 +77,8 @@
                     <td>
                       <p>Upstairs in the former bowling club</p>
 
-                      <span class="label label-default">woodworking</span>
-                      <span class="label label-default">metalworking</span>
+                      <span class="label label-default">Woodworking</span>
+                      <span class="label label-default">Metalworking</span>
                       <p class="text-right">
                         <a href="https://www.facebook.com/accshed/">
                           https://www.facebook.com/accshed/
