--- a/_includes/other_spaces.html
+++ b/_includes/other_spaces.html
@@ -110,7 +110,7 @@
                 </table>
 
                 <a href="https://github.com/AucklandHackspace/AucklandHackspace.github.io/blob/master/_includes/other_spaces.html" class="btn btn-default">
-                  Add or change this page
+                   To Improve This Page Click Here
                 </a>
 
 
