--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -15,7 +15,7 @@
                     <td>
                       <p>Can cut full sized 2400x1200mm sheet materials, foams and other materials</p>
                       <p>Fully dust extracted. Induction required to use!</p>
-                      <p>Courses running fortnightly for use (open to public) - register: http://meetu.ps/e/FbzCh/BPsl2/f</p>
+                      <p>Courses running fortnightly for use (open to public) - register: <a href="http://meetu.ps/e/FbzCh/BPsl2/f">http://meetu.ps/e/FbzCh/BPsl2/f</a></p>
                     </td>
                   </tr>
 
