--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -13,9 +13,9 @@
 
                     </td>
                     <td>
-                      <p>Can cut full sized 2400x1200mm sheet materials, foams and other materials</p>
+                      <p>This Machines name stands for Computer Numerical Control. You use a computer to promgramme its strokes, and the machine does the rest. It can cut full sized 2400x1200mm sheet materials, foams, wood, plastic etc... </p>
                       <p>Fully dust extracted. Induction required to use!</p>
-                      <p>Courses running fortnightly for use (open to public) - register: <a href="http://meetu.ps/e/FbzCh/BPsl2/f">http://meetu.ps/e/FbzCh/BPsl2/f</a></p>
+                      <p>Courses run fortnightly for use (open to public) - register here: <a href="http://meetu.ps/e/FbzCh/BPsl2/f">http://meetu.ps/e/FbzCh/BPsl2/f</a></p>
                     </td>
                   </tr>
 
@@ -25,7 +25,7 @@
                       <img src="img/prusa.jpg" class="img-responsive">
                     </td>
                     <td>
-                      <p>Print small objects in PET Plastic or ceramic clay</p>
+                      <p>Prints small objects in PET Plastic or ceramic clay</p>
                     </td>
                   </tr>
 
