added link to https://hackingismakingisengineering.wordpress.com/mechmate-74-hackland-user-guide/

--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -16,6 +16,8 @@
                       <p>Can cut full sized 2400x1200mm sheet materials, foams and other materials</p>
                       <p>Fully dust extracted. Induction required to use!</p>
                       <p>Courses running fortnightly for use (open to public) - register: http://meetu.ps/e/FbzCh/BPsl2/f</p>
+                      <a href="https://hackingismakingisengineering.wordpress.com/mechmate-74-hackland-user-guide/">https://hackingismakingisengineering.wordpress.com/mechmate-74-hackland-user-guide/<a>
+                        
                     </td>
                   </tr>
 
