Tangleball update (it's now closed).

--- a/_includes/other_spaces.html
+++ b/_includes/other_spaces.html
@@ -12,14 +12,8 @@
                     </td>
                     <td>
                       <p>
-                        Aucklands oldest and most established Makerspace.
-                        Regularly open every Monday from 6:30pm
+                        <b>Tangleball has closed permanently</b>, but it was Auckland's oldest and most established Makerspace.  
                       </p>
-
-                      <span class="label label-default">Woodworking</span>
-                      <span class="label label-default">Metalworking</span>
-                      <span class="label label-default">CNC</span>
-                      <span class="label label-default">3D Printing</span>
 
                       <p class="text-right">
                         <a href="http://www.tangleball.org.nz/">
