Added robot arm mill and lathe photo

--- a/_includes/equipment.html
+++ b/_includes/equipment.html
@@ -6,7 +6,17 @@
                 <h2>Current Equipment</h2>
 
                 <table class="table">
-                  <tr>
+                 <tr>
+                    <td>
+                      <p>6 Axis Robot Arm</p>
+                      <img src="img/robot_arm.jpg" class="img-responsive">
+                    </td>
+                    <td>
+                      <p>Being developed to make joinery with various woodworking tools</p>
+                    </td>
+                  </tr>
+                    
+                    <tr>
                     <td>
                       <p>2.4 x 1.2m CNC - Mechmate</p>
                       <img src="img/cnc.png" class="img-responsive">
@@ -18,6 +28,17 @@
                       <p>Courses running fortnightly for use (open to public) - register: http://meetu.ps/e/FbzCh/BPsl2/f</p>
                       <a href="https://hackingismakingisengineering.wordpress.com/mechmate-74-hackland-user-guide/">https://hackingismakingisengineering.wordpress.com/mechmate-74-hackland-user-guide/<a>
                         
+                    </td>
+                  </tr>
+                        
+                   <tr>
+                    <td>
+                      <p>Wood Drill Mill</p>
+                      <img src="img/wood_drill.jpg" class="img-responsive">
+
+                    </td>
+                    <td>
+                      <p>Milling and Drilling machine for woodshop</p>              
                     </td>
                   </tr>
 
@@ -71,11 +92,14 @@
                   <tr>
                     <td>
                       <p>Lathe</p>
+                      <img src="img/lathe.jpg" class="img-responsive">
                     </td>
                     <td>
                       <p>Can be used to make symetrical parts from light metals and plastics</p>
                     </td>
                   </tr>
+                        
+
                 </table>
 
 
