image and link updates

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,9 +6,9 @@
 
                 <address>
                   <strong>Hackland Incorporated</strong><br>
-                  Unit B, 48 Bond Street<br>
+                  Unit B-C, 48 Bond Street<br>
                   Kingsland, Auckland, 1021<br>
-                  <abbr title="Phone">P:</abbr> +64 (0204) 404-004
+                  <abbr title="Phone">P:</abbr> +64 (0204) 404 004
                 </address>
                 <!-- <p><a href="mailto:{{ site.email }}">{{ site.email }}</a>
                 </p> -->
