--- a/_includes/join_us.html
+++ b/_includes/join_us.html
@@ -7,14 +7,13 @@
                     <p>Members can use the space whenever they want, 24 hours every day of the week</p>
                     <p>The hackspace is regularly open to the public whenever a member is in to open up, and weekly on Thursday from 6pm - this is the busiest time and the best for new people visiting</p>
 
-                    <p>Membership costs $15 a week but please pay as much as you feel is fair so the space can survive.
-                      Casual day use is by Koha or coffee buying - please check Twitter to see if the space is open
+                    <p>Membership costs $20 a week but please pay as much as you feel is fair so the space can survive.
                     </p>
                     <p>
                       Membership includes full access to everything 24/7* including:
                     </p>
 
-                    <p>UNLIMITED Fibre Internet (unlimited other internet until fibre is installed)</p>
+                    <p>UNLIMITED Fibre Internet</p>
                     <p>Woodworking tools</p>
                     <p>Storage for projects</p>
                     <p>Soldering & Electronics</p>
