--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,16 +21,16 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#equipment">Equipment</a>
+                        <a class="page-scroll" href="#equipment">Stuff@HL</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Join!</a>
+                        <a class="page-scroll" href="https://goo.gl/forms/XAyCLl92GzYykcCa2">< Join ></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://join.slack.com/hakland/shared_invite/MTkwOTk4MDI5NjUwLTE0OTYzMDE0NDYtNGNmMDMxZGUxNw">SLACK</a>
+                        <a class="page-scroll" href="https://join.slack.com/hakland/shared_invite/MTkwOTk4MDI5NjUwLTE0OTYzMDE0NDYtNGNmMDMxZGUxNw">Message Board</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact Us</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
