Updated to working poicies Vans, MDF, sleeping, safety, ewaste
Updated to working poicies 
Vans, - refered to VAllhala
MDF - ban on use of MDF
safety - Added keep other members safe (should be obvious)
ewaste - avoid donations of trash.

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -32,15 +32,20 @@
               </p>
 
               <p>
-                <strong>Projects with Deadlines:</strong> the space is mostly incompatible with those who need to quickly build a one off thing which has deadlines - there are plenty of commercial spaces which are set up for this.
+                <strong>Projects with Deadlines:</strong> the space is mostly incompatible with those who need to quickly build a one off thing which has deadlines - there are plenty of commercial spaces which are set up for this. This includes construction of camper vans, particularly if you are unemployed in New Zealand and a non-resident. Overuse of equiptment and leaving of left over material and rubbish has unfortunately required us to enforce this policy. Please check out Valhalla Acoomodation as an alternative.
               </p>
 
 
               <p>
                 <strong>Safety:</strong> there are dangerous tools and equipment in the space. Please have someone show you
-                how to safely use any tool you are unfamilar with before turning them on. Always use the correct safety equipment and always warn other memberes in the space before making loud noises.
+                how to safely use any tool you are unfamilar with before turning them on. Always use the correct safety equipment protect other members from exposure to dangerous things and always warn other memberes in the space before making loud noises.
               </p>
 
+              <p>
+                <strong>Materials and Donations:</strong> High quality materials are welcomed at Hackland. We cannot accept everything as the space becomes too crowded to be useable. Every now and then we need to tidy up and through out old junk which costs us money to dispose of. Please don't donate broken electronic equiptment, please take it to a specialist e-waste recycler such as: https://www.computerrecycling.co.nz/ and dispose of it responsibly.
+                <strong>MDF </strong>is not permited in hackland as the dust is very dangerous to humans.  
+              </p>
+                
               <p>
                 <a href="https://github.com/HakLand/Constitution">github.com/HakLand/Constitution</a>
               </p>
