Added no sleeping plz
Added no sleeping plz

--- a/_includes/join_us.html
+++ b/_includes/join_us.html
@@ -21,6 +21,7 @@
                     <p>All of the tea / coffee</p>
 
                     <p>*plz no powertools/noisey things after 10pm</p>
+                    <p>*plz no sleeping at hackland</p>
                     <a href="https://goo.gl/forms/XAyCLl92GzYykcCa2" class="btn btn-default btn-lg">JOIN HACKLAND</a>
                 </div>
             </div>
