--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,13 +4,13 @@
   <a href="/"><img id="logo" src="/public/images/Hackland-2Lines.png"/></a>
   <nav id="nav" class="nav">
       <a href="#main-content" class="screen-reader-text">Skip Navigation</a>
-      <a class="sidebar-nav-item icon" href="javascript:void(0);" onclick="menu()">Menu</a>
-      <a class="sidebar-nav-item" href="/blog/">Blog</a>
-      <a class="sidebar-nav-item" href="/join/">Join</a>
-      <a class="sidebar-nav-item" href="/gallery/">Gallery</a>
-      <a class="sidebar-nav-item" href="/tools/">Tools</a>
-      <a class="sidebar-nav-item" href="/contact/">Contact</a>
-      <a class="sidebar-nav-item" href="/about/">About</a>
+      <a class="nav-item icon" href="javascript:void(0);" onclick="menu()">Menu</a>
+      <a class="nav-item" href="/blog/">Blog</a>
+      <a class="nav-item" href="/join/">Join</a>
+      <a class="nav-item" href="/gallery/">Gallery</a>
+      <a class="nav-item" href="/tools/">Tools</a>
+      <a class="nav-item" href="/contact/">Contact</a>
+      <a class="nav-item" href="/about/">About</a>
   </nav>
   <script>
     function menu() {
