minor tweaks - update slack link, update descriptions

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -32,7 +32,7 @@
               </p>
 
               <p>
-                <strong>Projects with Deadlines:</strong> the space is mostly incompatible with those who need to quickly build a one off thing which has deadlines - there are plenty of commercial spaces which are set up for this. This includes construction of camper vans, particularly if you are unemployed in New Zealand and a non-resident. Overuse of equiptment and leaving of left over material and rubbish has unfortunately required us to enforce this policy. Please check out Valhalla Acoomodation as an alternative.
+                <strong>Projects with Deadlines:</strong> the space is mostly incompatible with those who need to quickly build a one off thing which has deadlines - there are plenty of commercial spaces which are set up for this. This includes construction of camper vans. Overuse of equiptment and leaving of left over material and rubbish has unfortunately required us to enforce this policy. Please check out Valhalla Acoomodation as an alternative.
               </p>
 
 
