--- a/_includes/other_spaces.html
+++ b/_includes/other_spaces.html
@@ -3,7 +3,7 @@
     <div class="equipment-section">
         <div class="container">
             <div class="col-lg-12">
-                <h2>Other Makerspaces in Auckland</h2>
+                <h2>Other Makerspaces/Communities in Auckland</h2>
 
                 <table class="table">
                   <tr>
@@ -66,10 +66,10 @@
                   </tr>
                   <tr>
                     <td>
-                      <p> Auckland Central Community Shed</p>
+                      <p> Auckland Central Community Shed (Community Workshop)</p>
                     </td>
                     <td>
-                      <p>Upstairs in the former bowling club</p>
+                      <p>Downstairs in the former bowling club</p>
 
                       <span class="label label-default">Woodworking</span>
                       <span class="label label-default">Metalworking</span>
