--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,7 +27,7 @@
                         <a class="page-scroll" href="https://goo.gl/forms/XAyCLl92GzYykcCa2">< Join ></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://join.slack.com/hakland/shared_invite/MTkwOTk4MDI5NjUwLTE0OTYzMDE0NDYtNGNmMDMxZGUxNw">Message Board</a>
+                        <a class="page-scroll" href="https://join.slack.com/t/hakland/shared_invite/zt-2fqramvm-UY8p_R49~Q1EKQfYgzcjKA">Message Board</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
