minor tweaks, covid, new slack link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
   <nav id="nav" class="nav">
       <a href="#main-content" class="screen-reader-text">Skip Navigation</a>
       <a class="nav-item icon" href="javascript:void(0);" onclick="menu()">Menu</a>
-      <a class="nav-item" href="/blog/">Blog</a>
+      <!-- <a class="nav-item" href="/blog/">Blog</a> -->
       <a class="nav-item" href="/join/">Join</a>
       <a class="nav-item" href="/gallery/">Gallery</a>
       <a class="nav-item" href="/tools/">Tools</a>
