--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,16 @@
 <head>
+  <meta charset="utf-8">
   <link href="https://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <link rel="canonical" href="http://hackland.nz//">
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <title>
-    {% if page.title == "Home" %}
-      {{ site.title }}
+    {% if page.title == "Hackland" %}
+      {{ site.title }} &middot; {{site.description}}
     {% else %}
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
