--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <div id="main-content" class="content container">
       {% include navbar.html %}
       {{ content }}
+      {% include footer.html %}
     </div>
   </body>
 </html>
