--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <br><br>
 <hr>
-<sub>Is our website missing something? Want to suggest an improvement? Please <a href="https://github.com/HakLand/HakLand.github.io">open an issue</a> on Github or <a href="/contact">contact us on Slack</a>.</sub>
+<sub>Is our website missing something? Want to suggest an improvement? Please <a href="https://github.com/HakLand/HakLand.github.io">open an issue</a> on Github or <a href="/contact">get in touch</a>.</sub>
