Add Donations to the navbar.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,6 +9,7 @@
       <a class="nav-item" href="/join/">Join</a>
       <a class="nav-item" href="/gallery/">Gallery</a>
       <a class="nav-item" href="/tools/">Tools</a>
+      <a class="nav-item" href="/donations/">Donations</a>
       <a class="nav-item" href="/contact/">Contact</a>
       <a class="nav-item" href="/about/">About</a>
   </nav>
