--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -7,7 +7,7 @@
       <a class="nav-item icon" href="javascript:void(0);" onclick="menu()">Menu</a>
       <!-- <a class="nav-item" href="/blog/">Blog</a> -->
       <a class="nav-item" href="/join/">Join</a>
-      <a class="nav-item" href="/gallery/">Gallery</a>
+      <a class="nav-item" href="/projects/">Projects</a>
       <a class="nav-item" href="/tools/">Tools</a>
       <a class="nav-item" href="/donations/">Donations</a>
       <a class="nav-item" href="/contact/">Contact</a>
