--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,9 @@
   <link href="https://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <head>
+  <link rel="shortcut icon" type="image/x-icon" href="/public/images/favicon.ico" />
+</head>
 
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
@@ -27,5 +30,15 @@
   <meta name="author" content="Jono Shields">
   {% if page.url contains 'books'  %} <meta name="robots" content="noindex,nofollow">{% endif %}
   {% seo %}
-    
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2H0E5Y0V0X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2H0E5Y0V0X');
+</script>
+
 </head>
